# TinyCNN-on-STM32WBA65

./: README.md  readme.md
65ri_ble_v1/: .mxproject  65ri_ble_v1.ioc  CMakeCache.txt  CMakeLists.txt  STM32WBA65xx_FLASH.ld  STM32WBA65xx_RAM.ld  readme.md
65ri_ble_v1/Core/Inc/: app_conf.h  app_entry.h  main.h  stm32wbaxx_it.h  stm32wbaxx_nucleo_conf.h
65ri_ble_v1/Core/Src/: app_entry.c  main.c  stm32wbaxx_hal_msp.c  stm32wbaxx_it.c
65ri_ble_v1/Drivers/BSP/STM32WBAxx_Nucleo/: stm32wbaxx_nucleo.h
65ri_ble_v1/STM32_WPAN/App/: app_ble.c  app_ble.h  app_bsp.c  app_bsp.h  p2p_server.c  p2p_server.h  p2p_server_app.c  p2p_server_app.h
65ri_ble_v1/System/Config/ADC_Ctrl/: adc_ctrl_conf.h
65ri_ble_v1/System/Config/LowPower/: peripheral_init.c
65ri_ble_v1/System/Modules/: ble_timer.c  ble_timer.h
65ri_ble_v1/cmake/: starm-clang.cmake
65ri_ble_v1/cmake/stm32cubemx/: CMakeLists.txt
65test_v3/: .mxproject  65test_v3.ioc  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  STM32WBA65xx_FLASH.ld  STM32WBA65xx_RAM.ld
65test_v3/.ai/: network_null_c_info.json  network_tiny2dcnn.onnx_c_info.json
65test_v3/Core/Inc/: RTE_Components.h  main.h  stm32wbaxx_hal_conf.h  stm32wbaxx_it.h
65test_v3/Core/Src/: main.c  stm32wbaxx_hal_msp.c  stm32wbaxx_it.c
65test_v3/Drivers/STM32WBAxx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
65test_v3/X-CUBE-AI/App/: app_x-cube-ai.c  app_x-cube-ai.h  network.c  network.h  network_config.h  network_data.c  network_data.h  network_data_params.c  network_data_params.h  network_generate_report.txt
65test_v3/cmake/: gcc-arm-none-eabi.cmake
65test_v3/cmake/stm32cubemx/: CMakeLists.txt
